--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@
                 </li>
             </ol>
         </section>
-
-        <!--Siti collegati-->
+</main>
+<footer> 
+    
+    <!--Siti collegati-->
 
         <section>
             <hr>
@@ -128,7 +130,8 @@
                 alt="London Bridge">
         </section>
         <hr>
-    </main>
+    
+    </footer>    
 </body>
 
 </html>
